--- a/app/views/layout.haml
+++ b/app/views/layout.haml
@@ -14,7 +14,7 @@
     
   %body
     .container
-      #header.span-24.last
+      #header.span-16.prepend-4.append-4.last
         %h1 Twitter Dash
         
       = yield
