--- a/app/views/login.haml
+++ b/app/views/login.haml
@@ -6,10 +6,10 @@
       %p    
         %label Username:
         %br
-        %input.title{:type => "text", :id => "title", :name => "title", :value => ""}
+        %input.title{:type => "text", :id => "username", :name => "username", :value => ""}
       %p
         %label Password:
         %br
-        %input.title{:type => "password", :id => "link", :name => "link", :value => ""}
+        %input.title{:type => "password", :id => "password", :name => "password", :value => ""}
       %p
         %input{:type => "submit", :value => "Add"}
