--- a/app/public/css/dasher.css
+++ b/app/public/css/dasher.css
@@ -1,8 +1,8 @@
 .container { margin-top: 2em; }
 .center { text-align: center; }
-.tweet-stat h2 { font-size: 4em; font-weight: bold; text-align: center; margin-bottom: 0; }
-.tweet-stat p { text-align: center; }
-.tweet-stat div { text-align: center; }
+.tweet-stat h2 { font-size: 6em; font-weight: bold; text-align: center; margin-bottom: 0; }
+.tweet-stat p { font-size: 2em; text-align: center; padding:0; margin:1em 0 0 0; }
+.tweet-stat div { text-align: center; margin-bottom: 1me; }
 
 h1 { text-align: center; }
 fieldset { border: 0px; padding: 0;}
