--- a/app/public/css/dasher.css
+++ b/app/public/css/dasher.css
@@ -4,7 +4,7 @@
 .tweet-stat p { font-size: 2em; text-align: center; padding:0; margin:1em 0 0 0; }
 .tweet-stat div { text-align: center; margin-bottom: 1me; }
 
-h1 { text-align: center; font-weight: bold; }
+h1, h3 { text-align: center; font-weight: bold; }
 fieldset { border: 0px; padding: 0;}
 
 .clear { text-align: center; }
