--- a/app/views/layout.haml
+++ b/app/views/layout.haml
@@ -16,5 +16,5 @@
     .container
       #header.span-16.prepend-4.append-4.last
         %h1 Twitter Dash
-        
+        %h3 Your Twitter dashboard for the last 30 days.
       = yield
