Fixed submit button on index page.

--- a/app/views/index.haml
+++ b/app/views/index.haml
@@ -18,4 +18,4 @@
         %br
         %input.title{:type => "password", :id => "password", :name => "password", :value => ""}
       %p
-        %input{:type => "submit", :value => "Add"}
+        %input{:type => "submit", :value => "Submit"}
